--- a/phonebook-backend/package.json
+++ b/phonebook-backend/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "dev": "node --watch index.js",
     "build:ui": "rm -rf dist && cd .. /phonebook-frontend/practice2 && npm run build && cp -r dist ../phonebook-backend",
+    "deploy:ui": "npm run build:ui && git add . && git commit -m uibuild && git push origin main",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
