--- a/phonebook-backend/package.json
+++ b/phonebook-backend/package.json
@@ -8,7 +8,8 @@
     "dev": "node --watch index.js",
     "build:ui": "rm -rf dist && cd .. /phonebook-frontend/practice2 && npm run build && cp -r dist ../phonebook-backend",
     "deploy:ui": "npm run build:ui && git add . && git commit -m uibuild && git push origin main",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,12 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0"
   }
 }
